hphp/hack/test/typecheck/aktuple/vec_literal_ok.php.exp
File "vec_literal_ok.php", line 6, characters 12-16:
Invalid argument (Typing[4110])
File "vec_literal_ok.php", line 10, characters 19-21:
Expected int
File "vec_literal_ok.php", line 4, characters 18-22:
But got string
